# CreativeFileHub

./: .gitignore  README.md  RELEASING.md  index.html  package-lock.json  package.json
scripts/: release.ps1  setup-signing.ps1
src/: App.css  App.tsx  Overlay.tsx  main.tsx  types.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  app_profiles.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ContextMenu.tsx  UpdateBanner.tsx
src/context/: AppContext.tsx
src/pages/: Activity.tsx  AiSearch.tsx  Applications.tsx  Creative.tsx  Dashboard.tsx  Duplicates.tsx  Organise.tsx  Recent.tsx  Scanner.tsx  Settings.tsx
